--- a/src/index.scss
+++ b/src/index.scss
@@ -1,12 +1,13 @@
 body {
   margin: 0;
-  font-family: 'Lato' ,sans-serif;
+  padding: 20px 40px;
+  font-family: "Lato", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
